# SAHA

./: .env.example  .gitignore  Dockerfile.python  README.md  SAHA-Spec.md  docker-compose.yml  pyproject.toml
bus/: Dockerfile  go.mod  main.go
bus/internal/bus/: bus.go  topics.go
bus/internal/redis/: adapter.go
saha/: __init__.py
saha/contracts/: __init__.py  common.py  eval.py  execution.py  routing.py  vendor.py
saha/db/: __init__.py  connection.py
saha/db/migrations/: 001_initial.sql  002_phase2.sql  003_observability_indexes.sql
saha/eval/: __init__.py  grader.py  judge_calibration.py  llm_judge.py  normalizer.py  storage.py
saha/eval/golden_dataset/: __init__.py  loader.py
saha/event_bus/: __init__.py  client.py  topics.py
saha/execution/: __init__.py  agent_loop.py  agent_state.py  tool_runner.py
saha/hitl/: __init__.py  service.py
saha/observability/: __init__.py  anomaly_detector.py  metrics.py
saha/privacy/: __init__.py  gate.py
saha/routing/: __init__.py  constraints.py  escalation.py  router.py
services/eval_api/: __init__.py  main.py
services/execution_api/: main.py
services/observability_api/: main.py
services/routing_api/: main.py
services/vendor_api/: main.py
tests/: conftest.py
tests/integration/: test_claude_adapter.py  test_end_to_end.py  test_routing_pipeline.py
tests/unit/: test_contracts.py  test_error_mapper.py  test_grader.py  test_llm_judge.py  test_m4_adapters_privacy_hitl.py  test_metrics_aggregator.py  test_normalizer.py  test_router.py  test_tool_runner.py
(+1 files in other folders)
